[rav] fixed text align

--- a/src/components/molecules/FatalError/FatalError.scss
+++ b/src/components/molecules/FatalError/FatalError.scss
@@ -13,6 +13,7 @@
 
 .fatal-error__label {
   display: inline-block;
+  text-align: center;
   width: 480px;
   font-style: normal;
   font-weight: 500;
